# CV4Faces_Projects

./: README.md
Assignment_1/: Dec.h
Assignment_1/Crop_Resize/: CmakeLists.txt  Crop_Resize.cpp  Def.cpp  READMe.md
Assignment_1/StickFigureAnimation/: CMakeLists.txt  ReadMe.md  StickFigureAnimation_Main.cpp
Assignment_1/Thresholding_with_Histogram/: CMakeLists.txt  ReadMe.md  Thresholding_with_Histogram.cpp
Assignment_2/ColorExtraction/: CMakeLists.txt  ColorExtraction.cpp  ReadMe.md
Assignment_2/InstagramFilterApp/: CMakeLists.txt  Declarations.h  Definition.cpp  InstagramFilterApp.cpp  ReadMe.md
Eye_Glasses_Not_Eye_Glasses/: CMakeLists.txt  Common_Functions.h  Common_Functions_Definitions.cpp  image_Classification_SVM_dec.h  image_Classification_SVM_def.cpp  main.cpp
Warping_Binary_GUI_Applications/: CMakeLists.txt  Common_Functions.h  Common_Functions_Definitions.cpp  Module_1_Tutorials.cpp  Module_1_Tutorials.h  Module_1_Tutorials_Definitions.cpp  ReadMe.md
